# async-crawler

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
src/: main.rs
src/cache/: inmem.rs  mod.rs
src/cli/: app.rs
src/config/: configuration.rs
src/domain/: mod.rs  persistence.rs  processable.rs  rest_fact_dto.rs  scraper_result.rs
src/log/: logger.rs
src/periodic/: cron.rs
src/persist/: db.rs
src/processing/: core.rs  metrics.rs  mod.rs  store.rs
src/scraper/: http.rs
