[package]
name = "async-crawler"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chrono = "0.4.38"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] } 
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
